アクセス作成

--- a/assets/css/modules/_variables.scss
+++ b/assets/css/modules/_variables.scss
@@ -8,12 +8,14 @@ $colorBackground: #FDF9EF;
 
 $colorHamburgerBackground: #FED966;
 
+$colorBorder: #C6C6C6;
+
 
 // --------------------------------------------
 // 幅
 // --------------------------------------------
 $wrapperMaxWidth: 380px;
-$wrapperMaxWidthPc: 877px;
+$wrapperMaxWidthPc: 934px;
 
 
 
