--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,6 +573,32 @@ section:nth-child(2n) {
 }
 #Contact .description {
   font-weight: 700;
+  text-align: center;
+}
+#Contact .end-message, #Contact .false-message {
+  display: none;
+}
+
+form input, form textarea {
+  border: 1px solid #000;
+}
+form input[type=radio], form textarea[type=radio] {
+  -webkit-appearance: revert;
+     -moz-appearance: revert;
+          appearance: revert;
+  width: 20px;
+  height: 20px;
+}
+
+.form__ttl {
+  font-weight: 700;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .form__ttl {
+    font-size: 18px; /*IE9以前に対応する*/
+    font-size: 1.125rem;
+  }
 }
 
 .slider-slide {
