--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,23 +574,77 @@ section:nth-child(2n) {
 #Contact .description {
   font-weight: 700;
   text-align: center;
+  margin-bottom: 93px;
+  font-size: 18px; /*IE9以前に対応する*/
+  font-size: 1.125rem;
 }
 #Contact .end-message, #Contact .false-message {
   display: none;
 }
 
-form input, form textarea {
-  border: 1px solid #000;
-}
 form input[type=radio], form textarea[type=radio] {
+  border: #4E301B 2px solid;
+  accent-color: #4E301B;
   -webkit-appearance: revert;
      -moz-appearance: revert;
           appearance: revert;
   width: 20px;
   height: 20px;
 }
+form input[type=text], form input[type=mail], form textarea {
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  background: #EFEAE6;
+}
+@media screen and (min-width: 768px) {
+  form input[type=text], form input[type=mail], form textarea {
+    max-width: 334px;
+  }
+}
+form input[type=text]:focus, form input[type=mail]:focus, form textarea:focus {
+  outline: none;
+}
+@media screen and (min-width: 768px) {
+  form input[type=text][id=zip] {
+    max-width: 157px;
+  }
+}
+form input[type=text], form input[type=mail] {
+  height: 40px;
+  padding: 0 10px;
+}
+form textarea {
+  resize: none;
+  height: 170px;
+  padding: 10px;
+}
+form input[type=submit] {
+  font-weight: 700;
+  border-radius: 10px;
+  background: #FED966;
+  padding: 13px 94px;
+  text-align: center;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  form input[type=submit] {
+    max-width: 243px;
+  }
+}
 
+.form__wrapper {
+  border-radius: 20px;
+  background: #FFF;
+  padding: 37px 20px 43px 20px;
+}
+@media screen and (min-width: 768px) {
+  .form__wrapper {
+    padding: 37px 0 43px 76px;
+  }
+}
 .form__ttl {
+  margin-bottom: 41px;
   font-weight: 700;
   text-align: center;
 }
@@ -599,6 +653,54 @@ form input[type=radio], form textarea[type=radio] {
     font-size: 18px; /*IE9以前に対応する*/
     font-size: 1.125rem;
   }
+}
+.form__elm {
+  margin-bottom: 24px;
+}
+@media screen and (min-width: 768px) {
+  .form__elm {
+    display: flex;
+  }
+}
+.form__elm--container:nth-child(1) {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 768px) {
+  .form__elm--container:nth-child(1) {
+    width: 45%;
+    margin-bottom: 0px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .form__elm--container:nth-child(2) {
+    width: 50%;
+  }
+}
+.form__elm--label {
+  font-weight: 700;
+}
+.form__elm--child {
+  margin-bottom: 10px;
+}
+.form__elm--child:nth-last-child(1) {
+  margin-bottom: 0px;
+}
+.form__elm.submit {
+  margin-top: 50px;
+  text-align: center;
+  justify-content: center;
+}
+
+.required {
+  margin-top: -5px;
+  margin-left: 18px;
+  font-weight: 700;
+  border-radius: 10px;
+  background: #FED966;
+  padding: 5px 11px;
+  max-height: 30px;
 }
 
 .slider-slide {
