お問い合わせ

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -743,7 +743,7 @@ form {
         background: #FFF;
         padding: 37px 20px 43px 20px;
         @include pc {
-            padding: 37px 0 43px 76px;
+            padding: 37px 76px 43px 76px;
         }
     }
 
