--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -644,7 +644,7 @@ form input[type=submit] {
 }
 @media screen and (min-width: 768px) {
   .form__wrapper {
-    padding: 37px 0 43px 76px;
+    padding: 37px 76px 43px 76px;
   }
 }
 .form__ttl {
