--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -707,6 +707,15 @@ form input[type=submit] {
   max-height: 30px;
 }
 
+.footer__copyright {
+  padding: 21px 0 22px 0;
+  background-color: #D9D9D9;
+}
+
+.copyright {
+  text-align: center;
+}
+
 .slider-slide {
   width: 100%;
 }
