--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -814,7 +814,16 @@ form {
 // --------------------------------------------
 // サイドバー
 // --------------------------------------------
+.footer {
+    &__copyright {
+        padding: 21px 0 22px 0;
+        background-color: #D9D9D9;
+    }
+}
 
+.copyright {
+    text-align: center;
+}
 
 
 // --------------------------------------------
