--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -707,7 +707,36 @@ form input[type=submit] {
   max-height: 30px;
 }
 
-.footer__copyright {
+.footerImage {
+  margin-top: 24px;
+}
+.footerImage > img {
+  display: block;
+  margin: 0 auto;
+}
+.footerImage > img:nth-child(1) {
+  max-width: 96px;
+}
+.footerImage > img:nth-child(2) {
+  max-width: 300px;
+}
+@media screen and (min-width: 768px) {
+  .footerMenu {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.footerMenu__wrapper {
+  margin-top: 33px;
+  margin-bottom: 97px;
+}
+.footerMenu__wrapper.wrapper {
+  max-width: 568px;
+}
+.footerMenu__item {
+  font-weight: 700;
+}
+.footerCopyright {
   padding: 21px 0 22px 0;
   background-color: #D9D9D9;
 }
