--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ li {
   display: block;
 }
 
-section:nth-child(2n) {
+section.bg-on {
   background-color: #FDF9EF;
 }
 
@@ -574,9 +574,14 @@ section:nth-child(2n) {
 #Contact .description {
   font-weight: 700;
   text-align: center;
-  margin-bottom: 93px;
+  margin-bottom: 33px;
   font-size: 18px; /*IE9以前に対応する*/
   font-size: 1.125rem;
+}
+@media screen and (min-width: 769px) {
+  #Contact .description {
+    margin-bottom: 93px;
+  }
 }
 #Contact .end-message, #Contact .false-message {
   display: none;
