--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -363,6 +363,8 @@ section {
 
     & .about {
         &__txt {
+            color: #857868;
+            font-weight: 700;
             max-width: 526px;
             background: rgba(255, 255, 255, 0.90);
             line-height: 250%; 
