--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -456,6 +456,12 @@ section {
     }
 }
 
+.swiper {
+    &-wrapper {
+        padding-bottom: 10px;
+    }
+}
+
 
 
 // お知らせ
@@ -533,6 +539,19 @@ section {
         &--item {
             margin-bottom: 31px;
 
+            &:nth-child(1) {
+                & details[open] {
+                    height: 100px;
+                }
+            }
+            &:nth-child(3),
+            &:nth-child(4),
+            &:nth-child(5) {
+                & details[open] {
+                    height: 120px;
+                }
+            }
+
             &:nth-last-child(1) {
                 margin-bottom: 0px;
             }
@@ -550,6 +569,10 @@ section {
                         }
                     }
                 }
+
+                & p {
+                    line-height: 150%;
+                }
             }
 
             & summary {
@@ -558,7 +581,7 @@ section {
                 list-style: none;
                 background-color: $colorWhite;
                 padding: 16px 0 12px 55px;
-                margin-bottom: 36px;
+                margin-bottom: 24px;
                 height: 50px;
                 @include rem(16);
                 font-weight: $fontWeightMain;
